# labops-second-brain

./: .env.example  .gitignore  .gitleaks.toml  AGENT.md  DEVIATIONS.md  LICENSE  README.md  README.ru.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: gitleaks.yml
caddy/: Caddyfile.template  README.md
docs/: INTER-AGENT-WEBHOOKS.md  LEARNING-PATH.md  architecture.md  hermes-integration.md  security.md  setup.md  sources-map.md  task-mcp-integration.md  troubleshooting.md  walkthrough.md
migrations/: 001_initial_schema.sql  002_indexes.sql  003_slots.sql  004_hmac_secrets.sql  005_tasks.sql  006_agents.sql  007_scope_rename.sql  008_remove_runbooks_scope.sql
samples/: LEARNINGS.md  MEMORY.md  README.md  decisions.md  hot-recent.md  inbox-curated-example.md  inbox-raw-example.md
scripts/: __init__.py  check_env_sync.py  connect-agents.sh  connect-agents.test.sh  hermes_signed_proxy.py  install-local.sh  install-vps.sh  install.sh  issue-agent-token.py  issue-hmac-secret.py  migrate.sh  sanitize-check.sh  second_brain_doctor.py  smoke-test.sh  task-board-second_brain.sh  verify.sh
services/agent_router_mcp/: __init__.py  outbox.py  server.py  worker.py
services/core_mcp/: __init__.py  __main__.py
systemd/: README.md  agent_router-mcp.service.template  agent_router-worker.service.template  ingest-worker.service.template  memory-mcp.service.template  memory_router-mcp.service.template  recall-mcp.service.template  swarm-mcp.service.template  swarm-worker.service.template  task-mcp.service.template
tests/: conftest.py  test_agent_router_mcp.py  test_auth_cache.py  test_check_env_sync.py  test_create_decision_note_supersession.py  test_hermes_signed_proxy.py  test_hmac_auth.py  test_hmac_format_parity.py  test_hmac_operator.py  test_hmac_review_fixes.py  test_ingest_context.py  test_jaccard.py  test_memory_mcp.py  test_memory_router_mcp.py  test_personal_project_notes.py  test_recall_mcp.py  test_scopes.py  test_sdk_guard_hooks.py  test_second_brain_doctor.py  test_swarm_mcp.py  test_swarm_worker_hmac.py  test_task_claim_reclaim.py  test_task_supervisor.py  test_tool_gating.py
vault-template/: README.md
(+65 files in other folders)
