[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second_brain"
version = "0.1.0"
description = "Self-hosted MCP-native second brain with hybrid recall and inter-agent triggers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "second_brain contributors", email = "noreply@second_brain.invalid" },
]
keywords = ["mcp", "second-brain", "agents", "rag", "pgvector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
    "asyncpg>=0.30,<0.31",
    "uvicorn[standard]>=0.30,<0.32",
    "httpx>=0.27,<0.29",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.6,<3.0",
    "pgvector>=0.3,<0.4",
    "fastembed>=0.4,<1.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
second_brain-memory-mcp = "services.memory_mcp.server:main"
second_brain-memory_router-mcp = "services.memory_router_mcp.server:main"
second_brain-agent_router-mcp = "services.agent_router_mcp.server:main"
second_brain-agent_router-worker = "services.agent_router_mcp.worker:main"
second_brain-ingest-worker = "services.ingest_worker.worker:main"
second_brain-doctor = "scripts.second_brain_doctor:main"

[tool.setuptools.packages.find]
where = ["."]
# Include both `services*` (runtime) and `scripts*` (CLI entry points like
# second_brain-doctor that pyproject.toml [project.scripts] references). M5:
# without `scripts*` the second_brain-doctor entry point would fail to resolve
# after `pip install .`.
include = ["services*", "scripts*"]
exclude = ["tests*", "migrations*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires a running Postgres + FastEmbed environment",
]
